Add more documentation, polish